@@ -1,5 +1,10 @@
 2019-03-25  Mike Crowe  <mac@mcrowe.com>
 
+	* nptl/tst-rwlock14.c (do_test): Replace duplicate calls to
+	pthread_rwlock_timedrdlock with calls to
+	pthread_rwlock_timedwrlock to ensure that the latter is tested
+	too. Use new function name in diagnostic messages too.
+
 	* nptl/tst-sem5.c: Remove unused headers. Add <support/check.h>.
 	(do_test) Use libsupport test macros rather than hand-coded
 	conditionals and error messages. Ensure that sem_init returns zero
